--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
