--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 7000
-MONGO_DB_URL=mongodb://localhost:27017/
-# MONGOOSE_STRING=mongodb+srv://paulmarrottweaver:r27sRO5FrOgXURws@cluster0.d4bax3b.mongodb.net/
-DB_NAME=reactchat
+#MONGO_DB_URL=mongodb://localhost:27017/
+MONGOOSE_STRING=mongodb+srv://paulmarrottweaver:-pdRF_LGeMN8kC7@cluster0.d4bax3b.mongodb.net/
+DB_NAME=ReactChat2
 JWT_SECRET=mysecret
